--- a/examples/chat/src/index.html
+++ b/examples/chat/src/index.html
@@ -21,8 +21,6 @@
     </li>
   </ul>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/main.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
