fix(example) Several smaller fixes and update package

--- a/examples/chat/src/index.html
+++ b/examples/chat/src/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="app"></div>
   <ul class="pages">
     <li class="chat page">
       <div class="chatArea">
